main.tf
provider "aws" {
  region = "us-east-1"
}

resource "aws_security_group" "nginx_sg" {
  name = "nginx-sg"

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_instance" "nginx_server" {
  ami           = "ami-0c02fb55956c7d316"
  instance_type = "t3.micro"
  security_groups = [aws_security_group.nginx_sg.name]

  key_name = "blessing-key"

  tags = {
    Name = "Nginx-Server"
  }
}
